--- a/mycode/Data Cleaning, Transforming and Extraction.ipynb
+++ b/mycode/Data Cleaning, Transforming and Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "sql_dump_contents = os.path.join(parent_directory, 'data', 'telecom.sql')\n",
     "\n",
     "# Check if the file exists before attempting to read it\n",
-    "if os.path.exists(sql_file):\n",
+    "if os.path.exists(sql_dump_contents):\n",
     "    sql_dump_io = StringIO(sql_dump_contents)\n",
     "\n",
     "    # Skip the initial comments and statements until you reach the 'COPY' command\n",
