--- a/mycode/Data Cleaning, Transforming and Extraction.ipynb
+++ b/mycode/Data Cleaning, Transforming and Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [../data/newTelecom.sql]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from io import StringIO\n",
+    "\n",
+    "# Assuming data is a string containing the contents you posted\n",
+    "\n",
+    "# Use StringIO to convert the string data to a file-like object\n",
+    "data_file = StringIO('../data/telecom.sql')\n",
+    "\n",
+    "# Specify the delimiter used in your data (assuming it's a tab in this case)\n",
+    "delimiter = '\\t'\n",
+    "\n",
+    "# Read the data into a DataFrame\n",
+    "df = pd.read_csv(data_file, delimiter=delimiter)\n",
+    "\n",
+    "# Now you have your data in a pandas DataFrame (df)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
