edited file UserOverview

--- a/notebook/DataCleaning.ipynb
+++ b/notebook/DataCleaning.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Diriba\\AppData\\Local\\Temp\\ipykernel_17436\\3212664855.py:3: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\Diriba\\AppData\\Local\\Temp\\ipykernel_15536\\3212664855.py:3: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql('select * from xdr_data', con=engine)\n"
      ]
     },
@@ -274,7 +274,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -393,12 +393,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### missing value"
+    "#### missing value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -475,6 +475,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['TCP DL Retrans. Vol (Bytes)',\n",
+       " 'TCP UL Retrans. Vol (Bytes)',\n",
+       " 'HTTP DL (Bytes)',\n",
+       " 'HTTP UL (Bytes)',\n",
+       " 'Nb of sec with 125000B < Vol DL',\n",
+       " 'Nb of sec with 1250B < Vol UL < 6250B',\n",
+       " 'Nb of sec with 31250B < Vol DL < 125000B',\n",
+       " 'Nb of sec with 37500B < Vol UL',\n",
+       " 'Nb of sec with 6250B < Vol DL < 31250B',\n",
+       " 'Nb of sec with 6250B < Vol UL < 37500B']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# identifying the columns to be droped, with missing values greater than 50%\n",
+    "columns_to_drop = list(missing_df[missing_df[\"Missing Percentage\"]>=50].Column.values)\n",
+    "columns_to_drop"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -483,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -541,8 +572,6 @@
    ],
    "source": [
     "# Drop multiple columns with more than 50% missing value\n",
-    "\n",
-    "columns_to_drop = ['TCP DL Retrans. Vol (Bytes)', 'TCP UL Retrans. Vol (Bytes)', 'HTTP DL (Bytes)', 'HTTP UL (Bytes)', 'Nb of sec with 125000B < Vol DL', 'Nb of sec with 1250B < Vol UL < 6250B', 'Nb of sec with 31250B < Vol DL < 125000B', 'Nb of sec with 37500B < Vol UL', 'Nb of sec with 6250B < Vol DL < 31250B', 'Nb of sec with 6250B < Vol UL < 37500B']\n",
     "df = df.drop(columns_to_drop, axis=1)\n",
     "\n",
     "#print missing value after columns dropped\n",
@@ -557,12 +586,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate descriptive statistics "
+    "#### convert the data type of 'IMEI', 'IMSI', 'MSISDN/Number' to string data type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate descriptive statistics "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +914,7 @@
        "[8 rows x 40 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -946,6 +989,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### finally save the cleaned dataframe to csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150001, 45)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_csv('../data/clean_data.csv',index=False)\n",
+    "\n",
+    "df_clean = pd.read_csv('../data/clean_data.csv')\n",
+    "df_clean.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### User Overview analysis \n",
     " - identifying the top 10 handsets used by the customers.\n",
     " - identify the top 3 handset manufacturers\n",
@@ -955,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -982,14 +1055,12 @@
    "source": [
     "# top 10 handsets used by the customers\n",
     "top_handsets = df['Handset Type'].value_counts().head(10)\n",
-    "\n",
-    "# Display the top 10 handsets\n",
     "top_handsets[:10].plot(kind='bar', color=['teal', 'green', 'blue','purple','pink'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1069,7 @@
        "<Axes: xlabel='Handset Manufacturer'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1016,9 +1087,52 @@
    "source": [
     "# top 3 handset manufacturers\n",
     "top_manufacturers = df['Handset Manufacturer'].value_counts().head(3)\n",
-    "\n",
-    "# Display the top 3 handset manufacturers\n",
     "top_manufacturers[:3].plot(kind='bar', color=[ 'green', 'blue','purple'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### top 5 handsets per top 3 handset manufacturer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 5 Handsets for 59565:\n",
+      "Series([], dtype: object)\n",
+      "\n",
+      "Top 5 Handsets for 40839:\n",
+      "Series([], dtype: object)\n",
+      "\n",
+      "Top 5 Handsets for 34423:\n",
+      "Series([], dtype: object)\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_handsets_per_manufacturer = {}\n",
+    "\n",
+    "for manufacturer in top_manufacturers:\n",
+    "    if manufacturer in df['Handset Manufacturer'].unique():\n",
+    "        manufacturer_df = df[df['Handset Manufacturer'] == manufacturer]\n",
+    "        top_handsets = manufacturer_df['Handset Type'].value_counts().head(5)\n",
+    "        top_handsets_per_manufacturer[manufacturer] = top_handsets\n",
+    "    else:\n",
+    "        top_handsets_per_manufacturer[manufacturer] = pd.Series([])\n",
+    "\n",
+    "# Step 3: Display the top 5 handsets for each top manufacturer\n",
+    "for manufacturer, top_handsets in top_handsets_per_manufacturer.items():\n",
+    "    print(f\"\\nTop 5 Handsets for {manufacturer}:\")\n",
+    "    print(top_handsets)"
    ]
   }
  ],
