rearranging the streamlit folder

--- a/notebook/UserExperienceAnalysis.ipynb
+++ b/notebook/UserExperienceAnalysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,13 +103,74 @@
    ],
    "source": [
     "try:\n",
-    "    clean_data = pd.read_csv('../data/clean_data.csv')\n",
+    "    df = pd.read_csv('../data/clean_data.csv')\n",
     "except BaseException:\n",
     "    logging.error('either file not found or wrong format')\n",
     "    \n",
-    "print(clean_data.shape)\n",
-    "clean_data = clean_data.dropna()\n",
-    "clean_data.info()"
+    "print(df.shape)\n",
+    "df = df.dropna()\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Aggregate, per customer, the following information (treat missing & outliers by replacing by the mean or the mode of the corresponding variable):\n",
+    "- Average TCP retransmission\n",
+    "- Average RTT\n",
+    "- Handset type\n",
+    "- Average throughput\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace missing values in each column with the mean or mode\n",
+    "df['TCP_retransmission'].fillna(df['TCP_retransmission'].mean(), inplace=True)\n",
+    "df['RTT'].fillna(df['RTT'].mean(), inplace=True)\n",
+    "df['Handset_type'].fillna(df['Handset_type'].mode()[0], inplace=True)\n",
+    "df['throughput'].fillna(df['throughput'].mean(), inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import zscore\n",
+    "\n",
+    "# Calculate z-scores for each numeric column\n",
+    "z_scores = zscore(df[['TCP_retransmission', 'RTT', 'throughput']])\n",
+    "\n",
+    "# Set a threshold for identifying outliers (e.g., 3 standard deviations)\n",
+    "threshold = 3\n",
+    "outliers = (abs(z_scores) > threshold).any(axis=1)\n",
+    "\n",
+    "# Replace outliers with the mean\n",
+    "df.loc[outliers, ['TCP_retransmission', 'RTT', 'throughput']] = df.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by customer and calculate the required aggregations\n",
+    "customer_aggregated = df.groupby('Customer_ID').agg({\n",
+    "    'TCP_retransmission': 'mean',\n",
+    "    'RTT': 'mean',\n",
+    "    'Handset_type': lambda x: x.mode().iloc[0],  # Use mode for categorical variable\n",
+    "    'throughput': 'mean'\n",
+    "}).reset_index()\n",
+    "\n",
+    "\n",
+    "print(customer_aggregated)\n"
    ]
   }
  ],
