adding dataloader file for streamlit apps

--- a/notebook/DataCleaning.ipynb
+++ b/notebook/DataCleaning.ipynb
@@ -490,8 +490,8 @@
     }
    ],
    "source": [
-    "# identifying the columns to be droped, with missing values greater than 50%\n",
-    "columns_to_drop = list(missing_df[missing_df[\"Missing Percentage\"]>=50].Column.values)\n",
+    "# identifying the columns to be droped, with missing values greater than 25%\n",
+    "columns_to_drop = list(missing_df[missing_df[\"Missing Percentage\"]>=25].Column.values)\n",
     "columns_to_drop"
    ]
   },
@@ -499,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We drop the column with a percentage missing count of greater than 50%"
+    "- We drop the column with a percentage missing count of greater than 25%"
    ]
   },
   {
@@ -561,7 +561,7 @@
     }
    ],
    "source": [
-    "# Drop multiple columns with more than 50% missing value\n",
+    "# Drop multiple columns with more than 25% missing value\n",
     "df = df.drop(columns_to_drop, axis=1)\n",
     "\n",
     "#print missing value after columns dropped\n",
@@ -577,6 +577,19 @@
    "metadata": {},
    "source": [
     "#### convert the data type of 'IMEI', 'IMSI', 'MSISDN/Number' to string data type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of columns to convert to string\n",
+    "columns_to_convert = ['IMEI', 'IMSI', 'MSISDN/Number']\n",
+    "\n",
+    "# Convert selected columns to string data type\n",
+    "df[columns_to_convert] = df[columns_to_convert].astype(str)\n"
    ]
   },
   {
